# mr-lrc-generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  detail-6+2+2-cauchy-seed1.txt
docs/: optimizations.md
src/: all_symbol_skew_lrc.cpp  gf256.cpp  gf256.h  main.cpp  mr_lrc.cpp  mr_lrc.h
tests/: smoke.sh
